Bug #5065: Feature to specify 'required attributes' in LDAP datasoruce asset. User can now specify 'attributes to extract' in a comma-seperated string in 'Search Filter' screen.
 Following unrelated changes are also commited in this fix:
 - multiple attribute values in result are now combined using semicomma ';' (use to be comma before ',')
 - a block of code in edit function file which became redundent after recent code-refactoring (bug #5058) is removed

--- a/packages/data/data_source_ldap/locale/en/lang_screen_query.xml
+++ b/packages/data/data_source_ldap/locale/en/lang_screen_query.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_query.xml,v 1.1 2011/03/23 07:05:42 cupreti Exp $
+* $Id: lang_screen_query.xml,v 1.2 2011/04/13 07:01:06 cupreti Exp $
 *
 */
 -->
@@ -24,9 +24,14 @@
 				<process_function name="processLdapSearchFilter"/>
 			</function_call>
 <note>Use search query "(objectClass=*)" to list all the entries</note>			
-		</field>		
+		</field>
+		<field attribute="attributes">
+			<display_name>Attributes To Extract</display_name>
+			<note>Enter a comma-separated list of attributes to extract from the LDAP directory</note>
+		</field>
 		<field attribute="sort_by">
 			<display_name>Sort By</display_name>
+			<note>Enter a attribute name to sort by</note>
 		</field>
 	</section>
 	<section name ="Record Set Asset Names">
