Bug #5069: Hierarchy metadata field default value displays incorrectly. 1- Previewing default value when locks are released only works for single values otherwise always displays "No Default Value set" for multiple values. Invalid indexes being accessed. Let the paint function take care of it. 2- Previewing default value when locks are acquired depends on the flat view settings (allow_multiple and sorting/structure). So in Drill-Down View these will be reflected such that you can not set a multiple default value. By nature Drill-Down View is a multiple selector. Move the allow_multiple option into common view and to avoid the sorting/structure being reflected just let paint function take care of it. 3- On asset metadata screens, the default value does not show up correctly. Remove Metadata_Field_Hierarchy::getDefaultValue() function because it wrongly attempts to get an getHierarchyTree from the actual default value.

--- a/core/assets/metadata/metadata_fields/metadata_field_hierarchy/locale/en/lang_screen_details.xml
+++ b/core/assets/metadata/metadata_fields/metadata_field_hierarchy/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.6 2011/04/14 06:48:45 mhaidar Exp $
+* $Id: lang_screen_details.xml,v 1.7 2011/04/15 07:10:54 mhaidar Exp $
 *
 */
 -->
@@ -69,6 +69,10 @@
 			<display_name>Allow Empty</display_name>
 			<note />
 		</field>
+		<field attribute="multiple">
+			<display_name>Allow Multiple</display_name>
+			<note> You should select 'Yes' when using Drill-Down View </note>
+		</field>
 		<field attribute="visible_part">
 			<display_name>Frontend Part</display_name>
 			<note>%description%</note>
@@ -77,10 +81,6 @@
 	<section name="Flat View Options" show_if="isFlatView">
 		<field attribute="hier_structure">
 			<display_name>Show structure</display_name>
-		</field>
-		<field attribute="multiple">
-			<display_name>Allow Multiple</display_name>
-			<note />
 		</field>
 		<field attribute="hier_sort">
 			<display_name>Sort Hierarchy</display_name>
